adds name to the header

--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
     <title>CSS Portfolio</title>
 </head>
 <body>
-    <h1>
-        This is the title
-    </h1>
+    <header>
+    <h1>Yuliya's Portfolio</h1>
+</header>
 </body>
 </html>
