--- a/index.html
+++ b/index.html
@@ -10,5 +10,8 @@
     <header>
     <h1>Yuliya's Portfolio</h1>
 </header>
+<section id="bio">
+    <img src="https://cdn-img-feed.streeteasy.com/nyc/image/64/382664064.jpg" alt="Yuliya Tsoy">
+</section>
 </body>
 </html>
