adds email contact information

--- a/index.html
+++ b/index.html
@@ -13,5 +13,10 @@
 <section id="bio">
     <img src="https://cdn-img-feed.streeteasy.com/nyc/image/64/382664064.jpg" alt="Yuliya Tsoy">
 </section>
+<section id="contact">
+    <ul>
+        <li><a href="yuliyatsoy2023@gmail.com">Yuliya's Email</a></li>
+    </ul>
+</section>
 </body>
 </html>
