adds header nav with links to sections

--- a/index.html
+++ b/index.html
@@ -9,6 +9,12 @@
 <body>
     <header>
     <h1>Yuliya's Portfolio</h1>
+    <nav>
+        <ul>
+            <li><a href="#bio">Bio</a></li>
+            <li><a href="#contact">Contact</a></li>
+        </ul>
+    </nav>
 </header>
 <section id="bio">
     <img src="https://cdn-img-feed.streeteasy.com/nyc/image/64/382664064.jpg" alt="Yuliya Tsoy">
