added styles to position bio section

--- a/index.html
+++ b/index.html
@@ -19,11 +19,13 @@
             <li><a href="#resume">Resume</a></li>
         </ul>
     </nav>
-    <div>Cool Subtitle</div>
+    <div>Welcome to my Portfolio!</div>
 </header>
+
+<main>
 <aside>About me</aside>
-<section id="bio">About me paragraph goes here
-    <p>actual paragraph</p>
+<section id="bio">
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repudiandae illo, consectetur enim suscipit in qui tempore excepturi eveniet. Quam cumque repellat reprehenderit doloremque eum mollitia laudantium autem vel laboriosam ad!</p>
 </section>
 <aside>Work</aside>
 <section id="portfolio">Links to portfolios go here
@@ -35,11 +37,14 @@
         </ul>
     </nav>
 </section>
+</main>
+
 <aside id="contact">Contact me
     <ul>
         <li><a id="phone-number" href="yuliyatsoy2023@gmail.com">(34)977-2476</a></li>
         <li><a id="email" href="yuliyatsoy2023@gmail.com">yuliyatsoy2023@gmail.com</a></li>
         <li><a id="github" href="#">Github</a></li>
 </aside>
+
 </body>
 </html>
