added styles to contacts section

--- a/index.html
+++ b/index.html
@@ -39,12 +39,14 @@
 </section>
 </main>
 
-<aside id="contact">Contact me
+<aside id="contact">Contact me</aside>
+    <section class="contacts">
     <ul>
         <li><a id="phone-number" href="yuliyatsoy2023@gmail.com">(34)977-2476</a></li>
         <li><a id="email" href="yuliyatsoy2023@gmail.com">yuliyatsoy2023@gmail.com</a></li>
         <li><a id="github" href="#">Github</a></li>
-</aside>
+    </section>
+
 
 </body>
 </html>
