added images and styles to them

--- a/index.html
+++ b/index.html
@@ -19,24 +19,36 @@
             <li><a href="#resume">Resume</a></li>
         </ul>
     </nav>
-    <div>Welcome to my Portfolio!</div>
+    <div id="cool-title">Welcome to my Portfolio!</div>
 </header>
 
 <main>
 <aside>About me</aside>
 <section id="bio">
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repudiandae illo, consectetur enim suscipit in qui tempore excepturi eveniet. Quam cumque repellat reprehenderit doloremque eum mollitia laudantium autem vel laboriosam ad!</p>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repudiandae illo, consectetur enim suscipit in qui tempore excepturi eveniet. Quam cumque repellat reprehenderit doloremque eum mollitia laudantium autem vel laboriosam ad!
+    </p> 
+    <p>  
+    Lorem ipsum dolor sit amet consectetur adipisicing elit. Repudiandae illo, consectetur enim suscipit in qui tempore excepturi eveniet. Quam cumque repellat reprehenderit doloremque eum mollitia laudantium autem vel laboriosam ad!
+    </p>
+    
 </section>
 <aside>Work</aside>
-<section id="portfolio">Links to portfolios go here
+<section class="portfolio">
+    <img id="refactor" src="./assets/images/refactor.jpg" alt="Refactor Image">
+    
+   <img id="landing-page" src="./assets/images/mini-project01.jpg" alt="Landing Page">
+   <img id="css-portfolio" src="./assets/images/css-portfolio.jpg" alt="CSS Portfolio">
+
+</section>
+<!--     
     <nav>
         <ul>
-            <li><a href="#">Seo Company Refactor</a></li>
+            <li id="refactor"><a href="#">Seo Company Refactor</a></li>
             <li><a href="#">Landing Page</a></li>
             <li><a href="#">CSS Portfolio</a></li>
         </ul>
-    </nav>
-</section>
+    </nav> -->
+
 </main>
 
 <aside id="contact">Contact me</aside>
