added textboxes to the image

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             <li><a href="#resume">Resume</a></li>
         </ul>
     </nav>
-    <div id="cool-title">Welcome to my Portfolio!</div>
+    <div class="cool-title">Welcome to my Portfolio!</div>
 </header>
 
 <main>
@@ -34,11 +34,26 @@
 </section>
 <aside>Work</aside>
 <section class="portfolio">
-    <img id="refactor" src="./assets/images/refactor.jpg" alt="Refactor Image">
-    
-   <img id="landing-page" src="./assets/images/mini-project01.jpg" alt="Landing Page">
-   <img id="css-portfolio" src="./assets/images/css-portfolio.jpg" alt="CSS Portfolio">
-
+    <div class="container">
+    <a href=" https://yuliyatsoy.github.io/seo-company-refactor/"> <img id="refactor" src="./assets/images/refactor.jpg" alt="Refactor Image" style="width:100%"></a>
+    <div class="text-block"> 
+    <h2>SEO Company Refactor</h2> 
+<p>HTML/CSS</p></div>
+</div>
+ 
+<div class="container01">
+   <a href=" https://yuliyatsoy.github.io/Module-01-Mini-Project-Landing-Page/"><img id="landing-page" src="./assets/images/mini-project01.jpg" alt="Landing Page"style="width:48%"></a>
+   <div class="text-block01">
+    <h3>Landing Page</h3>
+    <p>HTML/CSS</p>
+   </div></div>
+   
+   <div class="container02">
+   <a href="https://yuliyatsoy.github.io/css-portfolio/"><img id="css-portfolio" src="./assets/images/css-portfolio.jpg" alt="CSS Portfolio" style="width:48%"></a>
+   <div class="text-block02">
+    <h3>CSS Portfolio</h3>
+    <p>Advanced CSS</p>
+   </div></div>
 </section>
 <!--     
     <nav>
