--- a/index.html
+++ b/index.html
@@ -40,20 +40,21 @@
     <h2>SEO Company Refactor</h2> 
 <p>HTML/CSS</p></div>
 </div>
- 
+<div class="flex-container"> 
 <div class="container01">
-   <a href=" https://yuliyatsoy.github.io/Module-01-Mini-Project-Landing-Page/"><img id="landing-page" src="./assets/images/mini-project01.jpg" alt="Landing Page"style="width:48%"></a>
+   <a class="cont01"href=" https://yuliyatsoy.github.io/Module-01-Mini-Project-Landing-Page/"><img id="landing-page" src="./assets/images/mini-project01.jpg" alt="Landing Page"s></a>
    <div class="text-block01">
     <h3>Landing Page</h3>
     <p>HTML/CSS</p>
    </div></div>
    
    <div class="container02">
-   <a href="https://yuliyatsoy.github.io/css-portfolio/"><img id="css-portfolio" src="./assets/images/css-portfolio.jpg" alt="CSS Portfolio" style="width:48%"></a>
+   <a id=cont02 href="https://yuliyatsoy.github.io/css-portfolio/"><img id="css-portfolio" src="./assets/images/css-portfolio.jpg" alt="CSS Portfolio"></a>
    <div class="text-block02">
     <h3>CSS Portfolio</h3>
     <p>Advanced CSS</p>
    </div></div>
+</div>
 </section>
 <!--     
     <nav>
