fixed third image position

--- a/index.html
+++ b/index.html
@@ -49,21 +49,13 @@
    </div></div>
    
    <div class="container02">
-   <a id=cont02 href="https://yuliyatsoy.github.io/css-portfolio/"><img id="css-portfolio" src="./assets/images/css-portfolio.jpg" alt="CSS Portfolio"></a>
+   <a class="cont02" href="https://yuliyatsoy.github.io/css-portfolio/"><img id="css-portfolio" src="./assets/images/css-portfolio.jpg" alt="CSS Portfolio"></a>
    <div class="text-block02">
     <h3>CSS Portfolio</h3>
     <p>Advanced CSS</p>
    </div></div>
 </div>
 </section>
-<!--     
-    <nav>
-        <ul>
-            <li id="refactor"><a href="#">Seo Company Refactor</a></li>
-            <li><a href="#">Landing Page</a></li>
-            <li><a href="#">CSS Portfolio</a></li>
-        </ul>
-    </nav> -->
 
 </main>
 
