Connected links in the nav bar with corresponding sections

--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
     <nav>
         <ul>
             <li><a href="#bio">About me</a></li>
-            <li><a href="#work">Work</a></li>
+            <li><a href="#portfolio">Work</a></li>
             <li><a href="#contact">Contact</a></li>
-            <li><a href="#resume">Resume</a></li>
+            <li><a href="./assets/Resume.pdf">Resume</a></li>
         </ul>
     </nav>
     <div class="cool-title">Welcome to my Portfolio!</div>
@@ -33,7 +33,7 @@
     
 </section>
 <aside>Work</aside>
-<section class="portfolio">
+<section id="portfolio">
     <div class="container">
     <a href=" https://yuliyatsoy.github.io/seo-company-refactor/"> <img id="refactor" src="./assets/images/refactor.jpg" alt="Refactor Image" style="width:100%"></a>
     <div class="text-block"> 
