adding some media query

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <header>
     <h1>Yuliya's Portfolio</h1>
     <img class="avatar" src="./assets/images/Headshot.jpg" alt="Yuliya Tsoy">
-    <nav>
+    <nav class="navigation">
         <ul>
             <li><a href="#bio">About me</a></li>
             <li><a href="#portfolio">Work</a></li>
