--- a/index.html
+++ b/index.html
@@ -34,9 +34,11 @@
 </section>
 <aside>Work</aside>
 <section id="portfolio">
+    
     <div class="container">
-    <a href=" https://yuliyatsoy.github.io/seo-company-refactor/"> <img id="refactor" src="./assets/images/refactor.jpg" alt="Refactor Image" style="width:100%"></a>
+    <a href=" https://yuliyatsoy.github.io/seo-company-refactor/">  <img id="refactor" src="./assets/images/refactor.jpg" alt="Refactor Image" style="width:100%"></a>
     <div class="text-block"> 
+     
     <h2>SEO Company Refactor</h2> 
 <p>HTML/CSS</p></div>
 </div>
@@ -66,7 +68,8 @@
         <li><a id="email" href="yuliyatsoy2023@gmail.com">yuliyatsoy2023@gmail.com</a></li>
         <li><a id="github" href="#">Github</a></li>
     </section>
-
+<footer><h3>Made with love &&hearts;</h3>
+</footer>
 
 </body>
 </html>
