adding overlay effect

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 <body>
     <header>
     <h1>Yuliya's Portfolio</h1>
+    <div>
     <img class="avatar" src="./assets/images/Headshot.jpg" alt="Yuliya Tsoy">
     <nav class="navigation">
         <ul>
@@ -19,6 +20,7 @@
             <li><a href="./assets/Resume.pdf">Resume</a></li>
         </ul>
     </nav>
+</div>
     <div class="cool-title">Welcome to my Portfolio!</div>
 </header>
 
@@ -36,7 +38,7 @@
 <section id="portfolio">
     
     <div class="container">
-    <a href=" https://yuliyatsoy.github.io/seo-company-refactor/">  <img id="refactor" src="./assets/images/refactor.jpg" alt="Refactor Image" style="width:100%"></a>
+    <a href=" https://yuliyatsoy.github.io/seo-company-refactor/">  <img class="overlay" id="refactor" src="./assets/images/refactor.jpg" alt="Refactor Image" style="width:100%"></a>
     <div class="text-block"> 
      
     <h2>SEO Company Refactor</h2> 
@@ -44,14 +46,14 @@
 </div>
 <div class="flex-container"> 
 <div class="container01">
-   <a class="cont01"href=" https://yuliyatsoy.github.io/Module-01-Mini-Project-Landing-Page/"><img id="landing-page" src="./assets/images/mini-project01.jpg" alt="Landing Page"s></a>
+   <a class="cont01"href=" https://yuliyatsoy.github.io/Module-01-Mini-Project-Landing-Page/"><img class="overlay" id="landing-page" src="./assets/images/mini-project01.jpg" alt="Landing Page"s></a>
    <div class="text-block01">
     <h3>Landing Page</h3>
     <p>HTML/CSS</p>
    </div></div>
    
    <div class="container02">
-   <a class="cont02" href="https://yuliyatsoy.github.io/css-portfolio/"><img id="css-portfolio" src="./assets/images/css-portfolio.jpg" alt="CSS Portfolio"></a>
+   <a class="cont02" href="https://yuliyatsoy.github.io/css-portfolio/"><img class="overlay" id="css-portfolio" src="./assets/images/css-portfolio.jpg" alt="CSS Portfolio"></a>
    <div class="text-block02">
     <h3>CSS Portfolio</h3>
     <p>Advanced CSS</p>
